# aosc-asahi-installer

./: .gitignore  .gitmodules  README.md  asahi-base.lst  asahi-desktop.lst  asahi-server.lst  bootstrap.sh  build-releases.sh  generate-releases.sh  generate_installer_data.py  install-system.sh
aosc-m1/: install_data.json  installer_data.json
data/: installer_data.json
files/: firstboot  firstboot.service  grub.cfg
image_build/: image_build.sh
image_build/scripts/: 00-apt.sh  30-grub.sh
metadata_generater/: Cargo.toml
metadata_generater/src/: main.rs
metadata_generator/: Cargo.toml
