[package]
name = "metadata_generater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive"] }
eyre = "0.6"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
zip = "0.6"
